objects/DemoSettings__c.object
<CustomObject>
    <description>Used by the Demo Configurator Tool built by Jesse Chase</description>
    <fields>
        <fullName>AllowEnable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowEnable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Description__c</fullName>
        <label>Completed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <formula>SUBSTITUTE( Name, &quot; &quot;, &quot;_&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enablement_Description__c</fullName>
        <label>Enablement Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demo Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Demo Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>